반응형-메인비주얼
Signed-off-by: songyi6811 <songyi6811@gmail.com>

--- a/css/style.css
+++ b/css/style.css
@@ -606,6 +606,7 @@ footer .inner .text p{
     }
 
     .main_visual img:nth-of-type(2) {
+        width: 100%;
         display: block;
     }
     .best-menu{
