반응형- 테블릿 완성
Signed-off-by: songyi6811 <songyi6811@gmail.com>

--- a/css/style.css
+++ b/css/style.css
@@ -332,18 +332,21 @@ button:hover{
 }
 .interview .inner .item_wrap .item:nth-of-type(1){
     width: 32%;
-    height: 500px;
+    height: 34.72vw;
     background: url('../img/interview-img01.png') center center no-repeat;
+    background-size: cover;
 }
 .interview .inner .item_wrap .item:nth-of-type(2){
     width: 32%;
-    height: 500px;
     background: url('../img/interview-img03.png') center center no-repeat;
+    height: 34.72vw;
+    background-size: cover;
 }
 .interview .inner .item_wrap .item:nth-of-type(3){
     width: 32%;
-    height: 500px;
     background: url('../img/interview-img02.png') center center no-repeat;
+    height: 34.72vw;
+    background-size: cover;
 }
 .interview .inner .item_wrap .item .in_title{
     width: 100%;
@@ -399,7 +402,7 @@ button:hover{
 }
 .event .inner .item_wrap .item{
     width: 24%;
-    height: 27vw;
+    height: 32vw;
     background-color: #fff;
     border: 1px solid #F73C5A;
     border-radius: 60px;
@@ -418,7 +421,7 @@ button:hover{
     transform: translateY(-20px);
 }
 .event .inner .item_wrap .item a img{
-    width: 90%;
+    width: 20vw;
     object-fit: cover;
     border: 1px solid #F73C5A;
     border-radius: 50px;
@@ -426,6 +429,7 @@ button:hover{
 .event .inner .item_wrap .item .coment{
     text-align: center;
     margin-bottom: 30px;
+    padding: 0 15px;
 }
 .event .inner .button{
     width: 100%;
@@ -444,6 +448,7 @@ button:hover{
     width: 100%;
     height: 615px;
     background: url('../img/search-bg.png') center center no-repeat;
+    background-size: cover;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -470,7 +475,7 @@ button:hover{
     position: relative;
 }
 .search .inner .search_box input{
-    width: 850px;
+    width: 80%;
     height: 80px;
     border: 1.5px solid #F73C5A;
     border-radius: 100px;
@@ -483,7 +488,7 @@ button:hover{
 }
 .search .inner .search_box img{
     position: absolute;
-    right: 22%;
+    right: 12%;
     top: 50%;
     transform: translateY(-50%);
     cursor: pointer;
@@ -537,8 +542,9 @@ button:hover{
 /* footer */
 footer{
     width: 100%;
-    height: 497px;
-    background: url('../img/footer.png');
+    height: 34.51vw;
+    background: url('../img/footer.png') center center no-repeat;
+    background-size: cover;
 }
 footer .inner{
     width: calc(100% - 40px);
@@ -570,7 +576,7 @@ footer .inner .text p{
     .best-menu .button button{
         width: 190px;
         height: 55px;
-        font-size: 12px;
+        font-size: 14px;
     }
     .header{
         width: 100%;
@@ -621,6 +627,9 @@ footer .inner .text p{
     }
     .best-menu .swiper-wrapper .swiper-slide:hover p{
         font-size: 16px;
+    }
+    .special{
+        margin-bottom: 150px;
     }
     .special .sub_coment{
         font-size: 20px;
@@ -699,5 +708,79 @@ footer .inner .text p{
         bottom: 220px;
         left: 220px;
         width: 13px;
+    }
+    .interview{
+        margin-bottom: 150px;
+    }
+    .interview .inner .item_wrap .item .text_wrap{
+        margin-left: 18px;
+    }
+    .interview .inner .item_wrap .item .in_title{
+        font-size: 20px;
+        margin-top: 50px;
+        margin-bottom: 30px;
+    }
+    .interview .inner .item_wrap .item .text_wrap .text01{
+        font-size: 16px;
+        margin-bottom: 20px;
+        line-height: 26px;
+    }
+    .interview .inner .item_wrap .item .text_wrap .text02 {
+        margin-bottom: 20px;
+        line-height: 24px;
+        font-size: 13px;
+    }
+    .interview .inner .item_wrap .item .text_wrap button {
+        width: 120px;
+        height: 35px;
+        border: none;
+        border-radius: 30px;
+        background-color: #F73C5A;
+        font-size: 12px;
+    }
+    .event{
+        margin-bottom: 150px;
+    }
+    .event .inner .item_wrap .item{
+        width: 32%;
+        height: 45vw;
+        gap: 30px;
+    }
+    .event .inner .item_wrap .item:nth-of-type(4){
+        display: none;
+    }
+    .event .inner .item_wrap .item .coment{
+        font-size: 14px;
+    }
+    .event .inner .item_wrap .item a img{
+        width: 25vw;
+    }
+    .search{
+        margin-bottom: 150px;
+    }
+    .search .sub_coment{
+        font-size: 20px;
+    }
+    .search .inner .search_box input::placeholder{
+        font-size: 20px;
+    }
+    .insta .inner .id a p{
+        font-size: 20px;
+    }
+    .insta .inner .id a .circle{
+        width: 12px;
+        height: 12px;
+    }
+    footer{
+        background-size: cover;
+    }
+    footer .inner{
+        gap: 30px;
+    }
+    footer .inner .logo img{
+        width: 90px;
+    }
+    footer .inner .text{
+        font-size: 12px;
     }
 }
