반응형-테블릿 완성 2차 업로드
Signed-off-by: songyi6811 <songyi6811@gmail.com>

--- a/css/style.css
+++ b/css/style.css
@@ -446,7 +446,7 @@ button:hover{
 /* search */
 .search{
     width: 100%;
-    height: 615px;
+    height: 42.7vw;
     background: url('../img/search-bg.png') center center no-repeat;
     background-size: cover;
     display: flex;
